# bio-check

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-base  README.md  _Dockerfile-base_CONDA_EXPERIMENT  __Dockerfile  add_new_biosimulators.ipynb  bio_check_demo.ipynb  build-containers.sh  compose.yaml  condaenv.n_dn60fa.requirements.txt  docker-compose.yaml  environment.base.lock.yml  environment.yml  install.sh  mysealedsecret.yaml  pyproject  pyproject.toml  qaoa_process.ipynb  requirements.txt  setup.py  time-course-spec.json  unused.txt
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml
.github/: parse_container_version.py
api/: .VERSION  .dockerignore  .refresh.py  Dockerfile-api  data_model.py  log_config.py  main.py  openapi_spec.py  pyproject.toml  requirements.api.txt  setup.py  shared.py
assets/: .refresh  Pipfile  bio_check_demo.ipynb  build_base.sh  build_image.sh  docker-compose.yaml  dropped.txt  environment.base.yml  gh_login.sh  push_image.sh  requirements.base.txt  rm_pycache.py  shared.py
bio_bundles/: .gitattributes  .gitignore  Dockerfile  README.md  __init__.py  builder.py  compatible.py  data_generator.py  environment.yml  io.py  pyproject  registry.py  steps.py  utils.py
bio_check/: __init__.py  database.py  demo.ipynb  io.py  processing_tools.py  service.py  test.ipynb  tests.py  verifier.py
biosimulator_processes/: steps.py
compose_api/: .__refresh.sh  Dockerfile-compose_api  compatible.py  data_model.py  io_api.py  log_config.py  main.py  openapi_spec.py  requirements.api.txt  shared.py
compose_worker/: .dockerignore  Dockerfile-compose_worker  Dockerfile-composer_worker  MinE.txt  None.simularium  Untitled.ipynb  _pysvarfoldersyy8crj8x7x53b86f0js60bn00000grTtmp5gex0nji_parsetab.py  _pysvarfoldersyy8crj8x7x53b86f0js60bn00000grTtmpdcqoq9ti_parsetab.py  _pysvarfoldersyy8crj8x7x53b86f0js60bn00000grTtmph4t547dj_parsetab.py  _pysvarfoldersyy8crj8x7x53b86f0js60bn00000grTtmpkouw7ap4_parsetab.py  _pysvarfoldersyy8crj8x7x53b86f0js60bn00000grTtmpnpwfide2_parsetab.py  _pysvarfoldersyy8crj8x7x53b86f0js60bn00000grTtmpp0tq027p_parsetab.py  _pysvarfoldersyy8crj8x7x53b86f0js60bn00000grTtmppp477zuc_parsetab.py  _pysvarfoldersyy8crj8x7x53b86f0js60bn00000grTtmprh7umvbj_parsetab.py  compatible.py  (+17 more)
worker/: .dockerignore  .pys_usercfg.ini  .worker_STABLE  Dockerfile-worker  README.md  _Dockerfile-compose_worker_CURRENT_STABLE  _Dockerfile-worker_EXPERIMENTAL_1  __init__.py  bigraph.py  bigraph_steps  bigraph_steps.py  compare.py  compatible.py  data_generator.py  data_model.py  dynamic_install.sh  environment.worker.yml  io.py  io_worker.py  job.original  job.py  jobs.py  main.py  output_data.py  output_generator.py  output_generators.py  pyproject.toml  requirements.worker.txt  setup.py  shared.py  shared_worker.py  simularium_utils.py  store_registry.py  supervisor.py  test_worker.py  tests.ipynb  tests.py  time-course-spec.json  verification.py  workers.py
worker/bigraph/: steps.py
worker/config/: environment.worker.yml
worker/datagen_src/: data_generator.pyx
worker/outputs/: test_time_course_output_generator_before.json  test_utc_output_generator.json  test_utc_output_generator_after.json  test_utc_output_generator_before.json  time-course-initialization.json  time-course-update.json
worker/service/: Dockerfile-worker  __init__.py  data_generator.py  data_model.py  db_connector.py  insert_test_data.py  io_worker.py  job.py  main.py  shared_worker.py  test_new_simulators.py  test_worker.py  verification.py
worker/service/bigraph/: steps.py
worker/shared/: database.py
worker/src/: data_generator.pyx
worker/test_fixtures/: MinE.txt
(+362 files in other folders)
