[project]
name = "bio-compose-server"
version = "0.0.1"
readme ="README.md"
description = "compose server"
authors = [{name = "Alex Patrie", email = "alex@example.com"}]

# only app-level deps
dependencies = [
    "requests-toolbelt",
    "python-dotenv",
    "google-cloud-storage",
    "python-multipart",
    "fastapi",
    "toml",
    "typing-extensions",
    "pymongo",
    "pydantic-settings",
    "pydantic",
    "uvicorn",
    "pyyaml",
    "chardet",
    "simulariumio",
    "numpy",
    "pandas",
    "process-bigraph",
    "bigraph-schema",
    "copasi-basico",
    "tellurium",
    "python-libsbml",
    "smoldyn"
]


[tool.setuptools]
packages = ["gateway", "shared", "worker"]


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
